--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,13 @@
 		<title>COVID-19 Tracker</title>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>		
 	</head>
 	<body>
 		<div class="navbar">
 			<nav>
 				<div class="nav-wrapper amber lighten-1">
-				  <a href="#" class="brand-logo"><i class="medium material-icons">ac_unit</i> COVID-19 Tracker</a>
+				  <a href="#" class="brand-logo">COVID-19 Tracker</a>
 				  <ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="sass.html">Sass</a></li>
 					<li><a href="badges.html">Components</a></li>
