--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,10 +6,10 @@
           <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Contacts</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#"></a></li>
+            <li><a class="grey-text text-lighten-3" href="#"></a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
           </ul>
@@ -18,8 +18,9 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2020 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      © 2020 Copyright 
+      <a class="grey-text text-lighten-4 right" href="https://www.linkedin.com/in/satyaki-das-305417162/"><i class="fab fa-linkedin small"> </i></a>
+      <a class="grey-text text-lighten-4 right" href="https://github.com/iamkryptonite"> <i class="fab fa-github small"></i></a>
       </div>
     </div>
   </footer>  
