--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/scripts/styles.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">	
+		<script src="https://kit.fontawesome.com/ed76cbd5d2.js" crossorigin="anonymous"></script>	
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>		
 	</head>
 	<body>
@@ -14,10 +15,11 @@
 			<nav>
 				<div class="nav-wrapper amber lighten-1">
 				  <a href="#" class="brand-logo">COVID-19 Tracker</a>
-				  <ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="sass.html">Sass</a></li>
-					<li><a href="badges.html">Components</a></li>
-					<li><a href="https://www.pmcares.gov.in/en/#l">Donate</a></li>
+				  <ul id="nav" class="right">
+					<!-- <li><a href="sass.html">Sass</a></li>
+					<li><a href="badges.html">Components</a></li> -->
+					<!-- <li><span><i class="material-icons">attach_money</i></span></li>
+					<li><a href="https://www.pmcares.gov.in/en/#l">Donate</a></li> -->
 				  </ul>
 				</div>
 			</nav>
