--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,25 +11,34 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>		
 	</head>
 	<body>
-		<div class="navbar">
+		<div class="navbar-fixed">
 			<nav>
-				<div class="nav-wrapper amber lighten-1">
+				<div class="nav-wrapper amber lighten-1 ">
 				  <a href="#" class="brand-logo">COVID-19 Tracker</a>
 				  <ul id="nav" class="right">
-					<!-- <li><a href="sass.html">Sass</a></li>
-					<li><a href="badges.html">Components</a></li> -->
+					
 					<!-- <li><span><i class="material-icons">attach_money</i></span></li> -->
-					<li><a href="https://www.pmcares.gov.in/en/#l">Donate</a></li>
+					
 				  </ul>
 				</div>
 			</nav>
 		</div>
 		<div class="wrapper">
-			<div class="side_bar">
-			
+			<div class="side_bar amber lighten-2">
+				<ul>
+					<li><a href="/"><i class="fas fa-home"></i>Home</a></li>
+					<li><a href="/">Tips</a></li>
+					<li><a href="https://www.pmcares.gov.in/en/#l"><i class="fas fa-hand-holding-usd"></i>Donate</a></li>
+				</ul>
+				<div class="social valign-wrapper center-align">
+					<a href="https://www.linkedin.com/in/satyaki-das-305417162/" target="_blank"><i class="small fab fa-linkedin"></i></a>
+					<a href="https://github.com/iamkryptonite" target="_blank"><i class="small fab fa-github"></i></a>
+					<a href="https://drive.google.com/open?id=1nN3PLr2DxLvpPasUlQKve9BT3lQqRwo3" target="_blank"><i class="small fas fa-file"></i></a>
+				</div>
 			</div>
 			<div class="main_content">
 
+			
 			
 		
 		
