--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") %>
-<div class="container">		
+<div class="">		
 	<div class="row">
 	  <div class="col s4">
 		<table class="highlight">
@@ -40,11 +40,11 @@
 		</tbody>
 		</table>
 	  </div>	  
-	  <div class="col s8">					
+	  <div class="col s7">					
 		<section class="container card-container">
 			<div class="card medium valign-wrapper">			
 				<div class="card-content ">
-					<% console.log(total) %>
+					
 					<h4>Active  <%=total["active"] %><span></span></h4>
 					<h4>Confirmed  <%=total["confirmed"] %>
 						<span class="updated red-text text-darken-1">
@@ -65,11 +65,11 @@
 					</h4>
 				</div>				
 			</div>
-			<div class="card large">
-				<canvas id="myChart" width="50" height="50"></canvas>
+			<div class="card">
+				<canvas id="myChart" height=300></canvas>
 			</div>
-			<div class="card large">
-				<canvas id="mylineChart" width="50" height="50"></canvas>
+			<div class="card">
+				<canvas id="mylineChart" height=200></canvas>
 			</div>
 			
 			
