--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
+  </div>
 </div>
-</div>
-<footer class="page-footer amber lighten-1">
+<!-- <footer class="page-footer amber lighten-1">
     <div class="foot container">
       <div class="row">
         <div class="col l6 s12">
@@ -25,7 +25,7 @@
       <a class="grey-text text-lighten-4 right" href="https://github.com/iamkryptonite"> <i class="fab fa-github small"></i></a>
       </div>
     </div>
-  </footer>  
+  </footer>   -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
   </html>
