--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,10 +15,8 @@
 			<nav>
 				<div class="nav-wrapper amber lighten-1 ">
 				  <a href="#" class="brand-logo">COVID-19 Tracker</a>
-				  <ul id="nav" class="right">
-					
+				  <ul id="nav" class="right">					
 					<!-- <li><span><i class="material-icons">attach_money</i></span></li> -->
-					
 				  </ul>
 				</div>
 			</nav>
@@ -27,8 +25,8 @@
 			<div class="side_bar amber lighten-2">
 				<ul>
 					<li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-					<li><a href="/">Tips</a></li>
-					<li><a href="https://www.pmcares.gov.in/en/#l"><i class="fas fa-hand-holding-usd"></i>Donate</a></li>
+					<li><a href="/tips">Tips</a></li>
+					<li><a href="https://www.pmcares.gov.in/en/#l" target="_blank"><i class="fas fa-hand-holding-usd"></i>Donate</a></li>
 				</ul>
 				<div class="social valign-wrapper center-align">
 					<a href="https://www.linkedin.com/in/satyaki-das-305417162/" target="_blank"><i class="small fab fa-linkedin"></i></a>
